tempfile/derive_more/tests/compile_fail/debug/unnamed_field_prefixed_with_dot.rs
#[derive(derive_more::Debug)]
pub struct Foo(#[debug("Stuff({})", .0)] String);

fn main() {}
